Fixed overflowing navbar on mobile

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -20,6 +20,11 @@
   margin-bottom: 10px;
 }
 
+#collapsingNavbar {
+  max-height: 80vh;
+  overflow: auto;
+}
+
 .superhidden {
   display: none !important;
 }
